[added]:visibility button & fix error

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -88,5 +88,5 @@
 }
 
 .authCard {
-  @apply flex flex-col gap-4 bg-white text-black w-11/12 md:w-2/5 rounded-lg p-2 md:p-10
+  @apply flex flex-col gap-4 bg-white text-black w-11/12 md:w-2/5 rounded-lg p-4 md:p-10
 }
